# flybird-site

./: .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
docs/: index.en.md  index.zh.md
docs/notes/home/: about.en.md  about.zh.md  sponsorship.en.md  sponsorship.zh.md
docs/notes/soft/: android.md  mac.md  soft.en.md  windows.md
docs/notes/soft/code/: convert.py  create.py
docs/notes/soft/mk_android/: Tips.md
docs/notes/soft/mk_mac/: Tips.md  图形设计.md  媒体工具.md  应用软件.md  系统工具.md  编程开发.md  网络工具.md
docs/notes/soft/mk_windows/: Tips.md  图形设计.md  媒体工具.md  应用软件.md  系统工具.md  编程开发.md  网络工具.md
en/: index.html
en/notes/cicd/: index.html
en/notes/cloud/: index.html
en/notes/dp/: index.html
en/notes/dp/go/: index.html
en/notes/dp/java/: index.html
en/notes/dp/python/: index.html
en/notes/home/about/: index.html
en/notes/home/sponsorship/: index.html
en/notes/ide/: index.html
en/notes/vcs/: index.html
en/notes/vcs/git/: index.html
notes/cicd/: index.html
notes/cloud/: index.html
notes/dp/: index.html
notes/dp/go/: index.html
notes/dp/java/: index.html
notes/dp/python/: index.html
notes/home/about/: index.html
notes/home/sponsorship/: index.html
notes/ide/: index.html
notes/soft/code/: convert_plugins.py  create.py
notes/soft/data/媒体工具/: 屏幕录像_win.csv  视频播放_win.csv  视频编辑_mac.csv
notes/vcs/: index.html
notes/vcs/git/: index.html
search/: search_index.json
(+58 files in other folders)
