[tool.poetry]
name = "flybird-site"
version = "0.1.0"
description = ""
authors = ["tishenme <tishenme@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = ">=3.0,<4.0"
markdown = ">=3.2,<4.0"
mkdocs = ">=1.6,<2.0"
mkdocs-material = "==9.*"
mkdocs-material-extensions = ">=1.3,<2.0"
pygments = ">=2.16,<3.0"
pymdown-extensions = ">=10.2,<11.0"
babel = ">=2.10,<3.0"
colorama = ">=0.4,<1.0"
paginate = ">=0.5,<1.0"
regex = ">=2022.4"
requests = ">=2.26,<3.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-rss-plugin = "^1.15.0"
mkdocs-static-i18n = "^1.2.3"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-macros-plugin = "^1.2.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
